crates/es-fluent-derive/tests/ui/fluent_label_bare_flags.rs
use es_fluent_derive::EsFluentLabel;

#[derive(EsFluentLabel)]
#[fluent_label(origin, variants)]
pub struct LoginForm;

fn main() {}
